Update phone no

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <div class="container">
                 <div class="icon"><i class="fa fa-phone"></i></div>
                 <h3>Call Me At</h3>
-                <p>+01 808-729-7051</p>
+                <p>+01 xxx-xxx-xxxx</p>
               </div>
             </div>
             <div class="contact-item">
